example/test-patch/patch-ingress-2g.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    mutation.neo9.io/mutable: "true"
  annotations:
    external-dns.alpha.kubernetes.io/ttl: "300"
    kubernetes.io/ingress.class: nginx
    mutation.neo9.io/ingress-allowed-visitors: customer
  name: demoingress2
  namespace: default
spec:
  rules:
  - host: demoingress2.dev-xmichel.neokube.neo9.pro
    http:
      paths:
      - backend:
          serviceName: nginx-ingress-controller-default-backend
          servicePort: 80
        path: /demo
